# sync-mysql-to-postgres

./: Cargo.toml  LICENSE  README.md  config.sample.toml
src/: config.rs  main.rs
