[package]
name = "sync-mysql-to-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "mysql", "postgres", "chrono", "decimal"] }
chrono = { version = "0.4" }
toml = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }